# readme_manager

./: .coveragerc  .flake8  .gitignore  license.txt  new features.txt  pyproject.toml  readme.md
src/animations/: readme_template.txt
src/bioview/: __init__.py  async_monitoring.py  async_with_GUI.py  calback_thread.py  charset_detector.py  config.py  dirtree.py  gui.py  load_readme.py  load_readme_list.py  pretty_print_paths.py  progress_window.py  readme_creation.py  save_readme_changes.py  scan_readmefiles.py  tooltip.py  tree_follower.py
tests/: test_config.py  test_dirtree.py  test_gui.py  test_load_readme.py  test_pretty_print.py  test_readme_creation.py  test_save_readme.py
